New: no.4 test video

--- a/content/第四組期中影片.html
+++ b/content/第四組期中影片.html
@@ -147,24 +147,23 @@ init_mathjax();
           </div>
           
         </header>
-    <div id="tipue_search_content">CMSimfly 架構 << <a href='CMSimfly 架構.html'>Previous</a> <a href='套用模板一.html'>Next</a> >> 套用模板一<br /><h1>bs4 應用</h1>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import bs4
-
-filename = "index.html"
-with open(filename, "r", encoding="utf-8") as f:
-    file_content = f.read()
-
-soup = bs4.BeautifulSoup(file_content, "lxml")
-
-new_content = soup.prettify()
-print(new_content)
-
-with open(filename, "w", encoding="utf-8") as f:
-    f.write(new_content)
-
-#print(soup.prettify())
-</pre>
-<br />CMSimfly 架構 << <a href='CMSimfly 架構.html'>Previous</a> <a href='套用模板一.html'>Next</a> >> 套用模板一</div>
+    <div id="tipue_search_content">期中報告 << <a href='期中報告.html'>Previous</a> <br /><h1>第四組期中影片</h1>
+<p>40723123期中影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/epvczHCgvno" width="560"></iframe></p>
+<p></p>
+<p>40723145期中影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/iHn2b8GI0f4" width="560"></iframe></p>
+<p></p>
+<p>40723150期中影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/CxVwNGUNPbw" width="560"></iframe></p>
+<p></p>
+<p>40723147期中影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/QJ7NeZLST-E" width="560"></iframe></p>
+<p></p>
+<p>40723136期中影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/A4H8jEd7aoA" width="560"></iframe></p>
+<p>40723126期中影片</p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZneFX7HpisY" width="560"></iframe></p><br />期中報告 << <a href='期中報告.html'>Previous</a> </div>
         
     <!-- footer -->
       <div class="container">
